compiler/tests/fa/errors/undefined_ident_fa.salam
// انتظار: خطا۰۰۱
// زبان: فارسی
تابع اصلی:
    چاپ ناشناخته
پایان
